// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> with additional className matches its snapshot 1`] = `
<NavigationLink
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
  title="Download the file"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block>
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with href passed matches its snapshot 1`] = `
<NavigationLink
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
  title="Download the file"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block>
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with onClick passed matches its snapshot 1`] = `
<Clickable
  ariaLabel="Download the file"
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block>
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</Clickable>
`;
